2001-10-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test:  Added a test case that checks if valid
	number strings are transformed correctly by string->number.

2001-09-21  Rob Browning  <rlb@defaultvalue.org>

	* tests/numbers.test (fixnum-bit): compute dynamically.

	* tests/bit-operations.test (fixnum-bit): compute dynamically.

2001-09-07  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/getopt-long.test ("apples-blimps-catalexis example",
	"multiple occurances"): New top-level sections.

2001-08-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test:  Made some of the patterns better readable.

2001-08-25  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/srfi-19.test (test-time-comparision,
	test-time-arithmatic): New procs.

	Add time comparison tests using new procs.
	Thanks to Alex Shinn.

2001-08-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/dynamic-scope.test: New file.

2001-08-24  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/srfi-13.test (string-for-each, string-for-each-index):
	Add tests.  (Thanks to Alex Shinn.)

2001-08-22  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* tests/srfi-13.test (string-map): Swapped order of string and
	proc args to conform with the srfi.  (Thanks to Alex Shinn.)

2001-08-12  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/getopt-long.test (exception:no-such-option,
	exception:option-does-not-support-arg,
	exception:option-must-be-specified,
	exception:option-must-have-arg, exception:not-enough-args):
	New vars.

	("option-ref", "required", "specified no value, given anyway",
	"specified arg required"): New top-level sections.

2001-08-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test:  Added Some syntax tests for
	string->number.

2001-08-09  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* Makefile.am (TESTS): Do not call the variable "TESTS", call it
	"SCM_TESTS".  This has special meaning to automake.  How many
	tries left to get this right, mvo?
